--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,87 @@
-html,
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
+
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'IBM Plex Mono', monospace;
+  padding: 50px;
+  background-color: #000;
+  color: #fff;
+
+  display: flex;
+  flex-flow: column;
+  align-items: center;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.title {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  text-align: center;
+  gap: 8px;
+  margin-bottom: 32px;
 }
 
-* {
-  box-sizing: border-box;
+.subhead {
+  font-size: 12px;
+  text-transform: uppercase;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+.header {
+  font-size: 48px;
 }
+
+.form-input {
+  text-transform: uppercase;
+}
+
+.form-label {
+  align-self: center;
+}
+
+.form {
+  display: flex;
+  flex-flow: column;
+  gap: 12px;
+  align-items: flex-start;
+  text-align: center;
+}
+
+input {
+  display: block;
+  border: none;
+  margin-top: 4px;
+  border: 1px solid #fff;
+  background: none;
+  color: white;
+  font-size: 16px;
+  height: 32px;
+  padding: 14px;
+  min-width: 250px;
+  font-family: 'IBM Plex Mono', monospace;
+  width: 350px;
+  margin-bottom: 12px;
+}
+
+input:focus {
+  outline: none;
+}
+
+/* hide default input arrows */
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+.send {
+  border: 1px solid white;
+  background: none;
+  padding: 14px;
+  color: #999999;
+  cursor: pointer;
+  font-family: 'IBM Plex Mono', monospace;
+  width: 100%;
+  font-size: 16px;
+}
+
+.send:hover {
+  color: white;
+}
+
