--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
 
+body, html {
+  margin: 0;
+}
+
 body {
   font-family: 'IBM Plex Mono', monospace;
   padding: 50px;
   background-color: #000;
   color: #fff;
+}
 
+.container {
   display: flex;
   flex-flow: column;
   align-items: center;
@@ -83,5 +89,11 @@ input[type=number]::-webkit-inner-spin-button {
 
 .send:hover {
   color: white;
+}
+
+@media only screen and (max-width: 900px) {
+  input {
+    width: 250px;
+  }
 }
 
