--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,21 +40,24 @@ body {
 }
 
 .form-label {
+  margin-bottom: 10px;
   align-self: center;
 }
 
 .form {
   display: flex;
   flex-flow: column;
-  gap: 12px;
   align-items: flex-start;
   text-align: center;
+  min-width: 500px;
+}
+.icon {
+  align-self: baseline;
 }
 
 input {
   display: block;
   border: none;
-  margin-top: 4px;
   border: 1px solid #fff;
   background: none;
   color: white;
@@ -63,7 +66,7 @@ input {
   padding: 14px;
   min-width: 250px;
   font-family: 'IBM Plex Mono', monospace;
-  width: 350px;
+  width: -webkit-fill-available;
   margin-bottom: 12px;
 }
 
@@ -89,6 +92,14 @@ input[type=number]::-webkit-inner-spin-button {
 
 .send:hover {
   color: white;
+}
+
+.wallet-connect {
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
 }
 
 @media only screen and (max-width: 900px) {
