Try tweaking CSS to use 100%

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -67,6 +67,8 @@ input {
   min-width: 250px;
   font-family: 'IBM Plex Mono', monospace;
   width: -webkit-fill-available;
+  width: -moz-available;
+  width: stretch;
   margin-bottom: 12px;
 }
 
