--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 body, html {
   margin: 0;
